--- a/t20_cricket_analysis.ipynb
+++ b/t20_cricket_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "(2592, 33)"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "RangeIndex(start=0, stop=2592, step=1)"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
        "[2592 rows x 20 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
        "(2592, 20)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
        "(2249, 20)"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
        "(2249, 20)"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
        "1     England                bat        2314      England  "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1143,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,7 @@
        "array(['Swaziland', 'Eswatini'], dtype=object)"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
        "array(['World-XI', 'ICC World XI'], dtype=object)"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
        "max           259.000000           10.000000         45.000000  117260.000000  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1426,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1629,7 +1629,7 @@
        "21  New Zealand               bowl        9639  New Zealand  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1641,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1650,7 +1650,7 @@
        "0.46703296703296704"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1662,10 +1662,282 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Match ID</th>\n",
+       "      <th>Match Date</th>\n",
+       "      <th>Team1 Name</th>\n",
+       "      <th>Team1 Captain</th>\n",
+       "      <th>Team1 Runs Scored</th>\n",
+       "      <th>Team1 Wickets Fell</th>\n",
+       "      <th>Team1 Extras Rec</th>\n",
+       "      <th>Team2 Name</th>\n",
+       "      <th>Team2 Captain</th>\n",
+       "      <th>Team2 Runs Scored</th>\n",
+       "      <th>Team2 Wickets Fell</th>\n",
+       "      <th>Team2 Extras Rec</th>\n",
+       "      <th>Match Venue (Country)</th>\n",
+       "      <th>Match Venue (Stadium)</th>\n",
+       "      <th>Toss Winner</th>\n",
+       "      <th>Toss Winner Choice</th>\n",
+       "      <th>MOM Player</th>\n",
+       "      <th>Match Winner</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>291356</td>\n",
+       "      <td>2008-02-01</td>\n",
+       "      <td>India</td>\n",
+       "      <td>7593</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>8876</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Melbourne Cricket Ground</td>\n",
+       "      <td>India</td>\n",
+       "      <td>bat</td>\n",
+       "      <td>8876</td>\n",
+       "      <td>Australia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>300436</td>\n",
+       "      <td>2008-02-07</td>\n",
+       "      <td>England</td>\n",
+       "      <td>2314</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>New Zealand</td>\n",
+       "      <td>10384</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>New Zealand</td>\n",
+       "      <td>Jade Stadium</td>\n",
+       "      <td>England</td>\n",
+       "      <td>bat</td>\n",
+       "      <td>2314</td>\n",
+       "      <td>England</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Match ID  Match Date Team1 Name  Team1 Captain  Team1 Runs Scored  \\\n",
+       "0    291356  2008-02-01      India           7593               74.0   \n",
+       "1    300436  2008-02-07    England           2314              193.0   \n",
+       "\n",
+       "   Team1 Wickets Fell  Team1 Extras Rec   Team2 Name  Team2 Captain  \\\n",
+       "0                10.0               3.0    Australia           8876   \n",
+       "1                 8.0               4.0  New Zealand          10384   \n",
+       "\n",
+       "   Team2 Runs Scored  Team2 Wickets Fell  Team2 Extras Rec  \\\n",
+       "0               75.0                 1.0               3.0   \n",
+       "1              143.0                 8.0               3.0   \n",
+       "\n",
+       "  Match Venue (Country)     Match Venue (Stadium) Toss Winner  \\\n",
+       "0             Australia  Melbourne Cricket Ground       India   \n",
+       "1           New Zealand              Jade Stadium     England   \n",
+       "\n",
+       "  Toss Winner Choice  MOM Player Match Winner  \n",
+       "0                bat        8876    Australia  \n",
+       "1                bat        2314      England  "
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfp.drop(['Team1 ID','Team2 ID'],axis=1,inplace=True)\n",
+    "dfp.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_id</th>\n",
+       "      <th>player_object_id</th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>dob</th>\n",
+       "      <th>dod</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>batting_style</th>\n",
+       "      <th>bowling_style</th>\n",
+       "      <th>country_id</th>\n",
+       "      <th>image_url</th>\n",
+       "      <th>image_metadata</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>93957</td>\n",
+       "      <td>1046619</td>\n",
+       "      <td>Avinash Pai</td>\n",
+       "      <td>1982-01-24</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M</td>\n",
+       "      <td>right-hand bat</td>\n",
+       "      <td>right-arm offbreak</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2182</td>\n",
+       "      <td>51462</td>\n",
+       "      <td>Sherwin Campbell</td>\n",
+       "      <td>1970-11-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M</td>\n",
+       "      <td>right-hand bat</td>\n",
+       "      <td>right-arm medium</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>https://img1.hscicdn.com/image/upload/f_auto,t...</td>\n",
+       "      <td>{'id': 326616, 'url': '/db/PICTURES/CMS/326600...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>48391</td>\n",
+       "      <td>56194</td>\n",
+       "      <td>Tamim Iqbal</td>\n",
+       "      <td>1989-03-20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M</td>\n",
+       "      <td>left-hand bat</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>https://img1.hscicdn.com/image/upload/f_auto,t...</td>\n",
+       "      <td>{'id': 303166, 'url': '/db/PICTURES/CMS/303100...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2198</td>\n",
+       "      <td>55935</td>\n",
+       "      <td>Javed Omar</td>\n",
+       "      <td>1976-11-25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M</td>\n",
+       "      <td>right-hand bat</td>\n",
+       "      <td>legbreak</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>https://img1.hscicdn.com/image/upload/f_auto,t...</td>\n",
+       "      <td>{'id': 302990, 'url': '/db/PICTURES/CMS/302900...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>52290</td>\n",
+       "      <td>298438</td>\n",
+       "      <td>Jason Roy</td>\n",
+       "      <td>1990-07-21</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M</td>\n",
+       "      <td>right-hand bat</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>https://img1.hscicdn.com/image/upload/f_auto,t...</td>\n",
+       "      <td>{'id': 303963, 'url': '/db/PICTURES/CMS/303900...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   player_id  player_object_id       player_name         dob  dod gender  \\\n",
+       "0      93957           1046619       Avinash Pai  1982-01-24  NaN      M   \n",
+       "1       2182             51462  Sherwin Campbell  1970-11-01  NaN      M   \n",
+       "2      48391             56194       Tamim Iqbal  1989-03-20  NaN      M   \n",
+       "3       2198             55935        Javed Omar  1976-11-25  NaN      M   \n",
+       "4      52290            298438         Jason Roy  1990-07-21  NaN      M   \n",
+       "\n",
+       "    batting_style       bowling_style  country_id  \\\n",
+       "0  right-hand bat  right-arm offbreak        18.0   \n",
+       "1  right-hand bat    right-arm medium         4.0   \n",
+       "2   left-hand bat                 NaN        25.0   \n",
+       "3  right-hand bat            legbreak        25.0   \n",
+       "4  right-hand bat                 NaN         1.0   \n",
+       "\n",
+       "                                           image_url  \\\n",
+       "0                                                NaN   \n",
+       "1  https://img1.hscicdn.com/image/upload/f_auto,t...   \n",
+       "2  https://img1.hscicdn.com/image/upload/f_auto,t...   \n",
+       "3  https://img1.hscicdn.com/image/upload/f_auto,t...   \n",
+       "4  https://img1.hscicdn.com/image/upload/f_auto,t...   \n",
+       "\n",
+       "                                      image_metadata  \n",
+       "0                                                NaN  \n",
+       "1  {'id': 326616, 'url': '/db/PICTURES/CMS/326600...  \n",
+       "2  {'id': 303166, 'url': '/db/PICTURES/CMS/303100...  \n",
+       "3  {'id': 302990, 'url': '/db/PICTURES/CMS/302900...  \n",
+       "4  {'id': 303963, 'url': '/db/PICTURES/CMS/303900...  "
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_players = pd.read_csv('Dataset/players_info.csv') #importing players info dataset\n",
+    "df_players.head()"
+   ]
   }
  ],
  "metadata": {
